--- a/x360ce.App.Beta/Controls/PadControl.xaml
+++ b/x360ce.App.Beta/Controls/PadControl.xaml
@@ -1,21 +1,22 @@
 ﻿<UserControl
-    x:Class="x360ce.App.Controls.PadControl"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:x360ce.App.Controls"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Loaded="UserControl_Loaded"
-    Unloaded="UserControl_Unloaded"
-    mc:Ignorable="d">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        <local:PadListControl x:Name="PadListPanel" Grid.Row="0" MinHeight="146" />
-        <local:PadItemControl x:Name="PadItemPanel" Grid.Row="1" />
-        <local:PadFootControl x:Name="PadFootPanel" Grid.Row="2" />
-    </Grid>
+	x:Class="x360ce.App.Controls.PadControl"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="clr-namespace:x360ce.App.Controls"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	d:Height="1000"
+	Loaded="UserControl_Loaded"
+	Unloaded="UserControl_Unloaded"
+	mc:Ignorable="d">
+	<Grid VerticalAlignment="Stretch">
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto" />
+			<RowDefinition Height="*" />
+			<RowDefinition Height="Auto" />
+		</Grid.RowDefinitions>
+		<local:PadListControl x:Name="PadListPanel" />
+		<local:PadItemControl x:Name="PadItemPanel" Grid.Row="1" />
+		<local:PadFootControl x:Name="PadFootPanel" Grid.Row="2" />
+	</Grid>
 </UserControl>
