--- a/x360ce.App.Beta/Controls/PadItemControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItemControl.xaml
@@ -1,56 +1,57 @@
 ﻿<UserControl
-    x:Class="x360ce.App.Controls.PadItemControl"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:x360ce.App.Controls"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    d:DesignWidth="800"
-    Loaded="UserControl_Loaded"
-    Unloaded="UserControl_Unloaded"
-    mc:Ignorable="d">
-    <TabControl Name="PadTabControl" Margin="3,3,3,0" Grid.IsSharedSizeScope="True">
-        <TabItem Name="GeneralTabPage" Header="General">
-            <local:PadItem_GeneralControl x:Name="GeneralPanel" />
-        </TabItem>
-        <TabItem Name="AdvancedTabPage" Header="Advanced">
-            <local:PadItem_AdvancedControl x:Name="AdvancedPanel" Height="{Binding Path=ActualHeight, ElementName=GeneralPanel, Mode=OneWay}" />
-        </TabItem>
-        <TabItem Name="ButtonsTabPage" Header="Buttons">
-            <local:PadItem_ButtonsControl x:Name="ButtonsPanel" Height="{Binding Path=ActualHeight, ElementName=GeneralPanel, Mode=OneWay}" />
-        </TabItem>
-        <TabItem Name="DPadTabPage" Header="D-Pad">
-            <local:PadItem_DPadControl x:Name="DPadPanel" Height="{Binding Path=ActualHeight, ElementName=GeneralPanel, Mode=OneWay}" />
-        </TabItem>
-        <TabItem Name="TRiggersTabPage" Header="Triggers">
-            <StackPanel Height="{Binding Path=ActualHeight, ElementName=GeneralPanel, Mode=OneWay}" Orientation="Vertical">
-                <local:AxisMapControl x:Name="LeftTriggerPanel" x:FieldModifier="public" />
-                <local:AxisMapControl x:Name="RightTriggerPanel" x:FieldModifier="public" />
-            </StackPanel>
-        </TabItem>
-        <TabItem Name="LeftThumbTabPage" Header="Left Thumb">
-            <StackPanel Height="{Binding Path=ActualHeight, ElementName=GeneralPanel, Mode=OneWay}" Orientation="Vertical">
-                <local:AxisMapControl x:Name="LeftThumbXPanel" x:FieldModifier="public" />
-                <local:AxisMapControl x:Name="LeftThumbYPanel" x:FieldModifier="public" />
-            </StackPanel>
-        </TabItem>
-        <TabItem Name="RightThumbTabPage" Header="Right Thumb">
-            <StackPanel Height="{Binding Path=ActualHeight, ElementName=GeneralPanel, Mode=OneWay}" Orientation="Vertical">
-                <local:AxisMapControl x:Name="RightThumbXPanel" x:FieldModifier="public" />
-                <local:AxisMapControl x:Name="RightThumbYPanel" x:FieldModifier="public" />
-            </StackPanel>
-        </TabItem>
-        <TabItem Name="ForceFeedbackTabPage" Header="Force Feedback">
-            <local:PadItem_ForceFeedbackControl x:Name="ForceFeedbackPanel" Height="{Binding Path=ActualHeight, ElementName=GeneralPanel, Mode=OneWay}" />
-        </TabItem>
-        <TabItem Name="MacrosTabPage" Header="Macros">
-            <local:PadItem_MacrosControl x:Name="MacrosPanel" Height="{Binding Path=ActualHeight, ElementName=GeneralPanel, Mode=OneWay}" />
-        </TabItem>
-        <TabItem Name="XInputTabPage" Header="XInput">
-            <local:PadItem_XInputControl x:Name="XInputPanel" Height="{Binding Path=ActualHeight, ElementName=GeneralPanel, Mode=OneWay}" />
-        </TabItem>
-        <TabItem Name="DInputTabPage" Header="DInput">
-            <local:PadItem_DInputControl x:Name="DInputPanel" Height="{Binding Path=ActualHeight, ElementName=GeneralPanel, Mode=OneWay}" />
-        </TabItem>
-    </TabControl>
+	x:Class="x360ce.App.Controls.PadItemControl"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="clr-namespace:x360ce.App.Controls"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	d:Height="900"
+	d:Width="900"
+	Loaded="UserControl_Loaded"
+	Unloaded="UserControl_Unloaded"
+	mc:Ignorable="d">
+	<TabControl Name="PadTabControl" Margin="3,3,3,0">
+		<TabItem Name="GeneralTabPage" Header="General">
+			<local:PadItem_GeneralControl x:Name="GeneralPanel" />
+		</TabItem>
+		<TabItem Name="AdvancedTabPage" Header="Advanced">
+			<local:PadItem_AdvancedControl x:Name="AdvancedPanel" />
+		</TabItem>
+		<TabItem Name="ButtonsTabPage" Header="Buttons">
+			<local:PadItem_ButtonsControl x:Name="ButtonsPanel" />
+		</TabItem>
+		<TabItem Name="DPadTabPage" Header="D-Pad">
+			<local:PadItem_DPadControl x:Name="DPadPanel" />
+		</TabItem>
+		<TabItem Name="TRiggersTabPage" Header="Triggers">
+			<StackPanel>
+				<local:AxisMapControl x:Name="LeftTriggerPanel" x:FieldModifier="public" />
+				<local:AxisMapControl x:Name="RightTriggerPanel" x:FieldModifier="public" />
+			</StackPanel>
+		</TabItem>
+		<TabItem Name="LeftThumbTabPage" Header="Left Stick">
+			<StackPanel>
+				<local:AxisMapControl x:Name="LeftThumbXPanel" x:FieldModifier="public" />
+				<local:AxisMapControl x:Name="LeftThumbYPanel" x:FieldModifier="public" />
+			</StackPanel>
+		</TabItem>
+		<TabItem Name="RightThumbTabPage" Header="Right Stick">
+			<StackPanel>
+				<local:AxisMapControl x:Name="RightThumbXPanel" x:FieldModifier="public" />
+				<local:AxisMapControl x:Name="RightThumbYPanel" x:FieldModifier="public" />
+			</StackPanel>
+		</TabItem>
+		<TabItem Name="ForceFeedbackTabPage" Header="Force Feedback">
+			<local:PadItem_ForceFeedbackControl x:Name="ForceFeedbackPanel" />
+		</TabItem>
+		<TabItem Name="MacrosTabPage" Header="Macros">
+			<local:PadItem_MacrosControl x:Name="MacrosPanel" />
+		</TabItem>
+		<TabItem Name="XInputTabPage" Header="XInput">
+			<local:PadItem_XInputControl x:Name="XInputPanel" />
+		</TabItem>
+		<TabItem Name="DInputTabPage" Header="DInput">
+			<local:PadItem_DInputControl x:Name="DInputPanel" />
+		</TabItem>
+	</TabControl>
 </UserControl>
