--- a/x360ce.App.Beta/Controls/PadItem_DPadControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_DPadControl.xaml
@@ -1,59 +1,55 @@
 <UserControl
-    x:Class="x360ce.App.Controls.PadItem_DPadControl"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:JcControls="clr-namespace:JocysCom.ClassLibrary.Controls;assembly=x360ce.Engine"
-    xmlns:controls="clr-namespace:x360ce.App.Controls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Loaded="UserControl_Loaded"
-    Unloaded="UserControl_Unloaded"
-    mc:Ignorable="d">
-    <GroupBox Margin="3">
-        <GroupBox.Header>
-            <CheckBox
-                Name="EnabledCheckBox"
-                Margin="-4,-6,-4,-4"
-                VerticalAlignment="Center"
-                Content="Axis to D-Pad" />
-        </GroupBox.Header>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition />
-            </Grid.RowDefinitions>
-            <Label Name="DeadZoneLabel" Margin="0,0,5,0" Content="DeadZone" />
-            <StackPanel Grid.Column="1" Orientation="Horizontal">
-                <Slider Name="DeadZoneTrackBar" Width="200" VerticalAlignment="Center" />
-                <JcControls:NumericUpDown x:Name="DeadZoneUpDown" Value="0" />
-                <TextBox
-                    Name="DeadZoneTextBox"
-                    Width="50"
-                    HorizontalContentAlignment="Right"
-                    IsReadOnly="True"
-                    IsTabStop="False"
-                    Text="0 %" />
-            </StackPanel>
-            <Label
-                Name="OffsetLabel"
-                Grid.Row="1"
-                Margin="0,0,5,0"
-                Content="Offset" />
-            <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal">
-                <Slider Name="OffsetTrackBar" Width="200" VerticalAlignment="Center" />
-                <JcControls:NumericUpDown x:Name="OffsetUpDown" Value="0" />
-                <TextBox
-                    Name="OffsetTextBox"
-                    Width="50"
-                    HorizontalContentAlignment="Right"
-                    IsReadOnly="True"
-                    IsTabStop="False"
-                    Text="0 %" />
-            </StackPanel>
-        </Grid>
-    </GroupBox>
+	x:Class="x360ce.App.Controls.PadItem_DPadControl"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:JcControls="clr-namespace:JocysCom.ClassLibrary.Controls;assembly=x360ce.Engine"
+	xmlns:controls="clr-namespace:x360ce.App.Controls"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	Loaded="UserControl_Loaded"
+	Unloaded="UserControl_Unloaded"
+	mc:Ignorable="d">
+	<GroupBox Margin="3">
+		<GroupBox.Header>
+			<CheckBox
+				Name="EnabledCheckBox"
+				Margin="-4,-6,-4,-4"
+				VerticalAlignment="Center"
+				Content="Axis to D-Pad" />
+		</GroupBox.Header>
+		<Grid>
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="Auto" />
+				<ColumnDefinition />
+			</Grid.ColumnDefinitions>
+			<Grid.RowDefinitions>
+				<RowDefinition />
+				<RowDefinition />
+			</Grid.RowDefinitions>
+			<Label Name="DeadZoneLabel" Content="DeadZone" />
+			<StackPanel Grid.Column="1" Orientation="Horizontal" Margin="3,0,0,0">
+				<Slider Name="DeadZoneTrackBar" Width="200" VerticalAlignment="Center" />
+				<JcControls:NumericUpDown x:Name="DeadZoneUpDown" Value="0" />
+				<TextBox
+					Name="DeadZoneTextBox"
+					Width="50"
+					HorizontalContentAlignment="Right"
+					IsReadOnly="True"
+					IsTabStop="False"
+					Text="0 %" />
+			</StackPanel>
+			<Label Name="OffsetLabel" Grid.Row="1" Content="Offset" />
+			<StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" Margin="3,0,0,0">
+				<Slider Name="OffsetTrackBar" Width="200" VerticalAlignment="Center" />
+				<JcControls:NumericUpDown x:Name="OffsetUpDown" Value="0" />
+				<TextBox
+					Name="OffsetTextBox"
+					Width="50"
+					HorizontalContentAlignment="Right"
+					IsReadOnly="True"
+					IsTabStop="False"
+					Text="0 %" />
+			</StackPanel>
+		</Grid>
+	</GroupBox>
 </UserControl>
